<resources>
    <string name="app_name">Home-Money</string>
    <string name="enter">Вход</string>
    <string name="authorization">Авторизация</string>
    <string name="registration">Регистрация</string>
    <string name="forget_email_message">Ваш пароль будет отправлен на почту, которую Вы указывали при регистрации.</string>
    <string name="forget">Забыли пароль?</string>
    <string name="email">Эл. почта</string>
    <string name="enter_email">Введите эл. почту.</string>
    <string name="enter_plan">Введите запланированный бюджет.</string>
    <string name="plan">Запланированный бюджет.</string>
    <string name="confidentialText">Нажав кнопку \"Регистрация\", Вы автоматически принимаете <a href="https://github.com/NataliPi/Home-Money/blob/master/PrivacyPolicy.md">условия конфиденциальности</a></string>
    <string name="privacyPolicyLink">https://github.com/NataliPi/Home-Money/blob/master/PrivacyPolicy.md</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="last_spendings">Последние затраты</string>
    <string name="name">Имя</string>
    <string name="surname">Фамилия</string>
    <string name="planned_spendings">Запланированные затраты</string>
    <string name="budget">Бюджет</string>
    <string name="statistics">Статистика</string>
    <string name="search">Поиск</string>
    <string name="manage_accounts">Настройки семьи</string>
    <string name="settings">Настройки</string>
    <string name="spending_name">Название</string>
    <string name="sum">Сумма</string>
    <string name="date">Дата</string>
    <string name="detail_info">Детальная информация</string>
    <string name="add_component">Добавить компонент счёта</string>
    <string name="add_spending">Добавление нового счета</string>
    <string name="category">Категория</string>
    <string name="pets">Питомцы</string>
    <string name="home">Дом</string>
    <string name="food">Еда</string>
    <string name="transport">Транспорт</string>
    <string name="sport">Спорт</string>
    <string name="health">Здоровье</string>
    <string name="beauty">Красота</string>
    <string name="shopping">Шопинг</string>
    <string name="entertainment">Развлечения</string>
    <string name="travel">Путешествия</string>
    <string name="education">Обучение</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>


    <string name="action_settings">Settings</string>
    <string name="profile_setting">Настройки личного профиля</string>
    <string name="chooseCategory">Выбор категории</string>
    <string name="pie_chart">Круговая</string>
    <string name="bar_chart">Столбчатая</string>
    <string name="baseData">Основные данные</string>
    <string name="price">Цена</string>
    <string name="currency">Ввалюта</string>
    <string name="uah">грн</string>
    <string name="notification">Нотификации</string>
    <string name="passsett">Защита паролем</string>
    <string name="premium">Премиум аккаунт</string>
    <string name="about">Справка</string>
    <string name="family_name">Название семьи</string>
    <string name="family_setting">Настройки семьи</string>
    <string name="family_profile_settings">Настройки семейного профиля</string>
    <string name="add_to_family">Добавить семью</string>
    <string name="delete_from_family">Удалить из семьи</string>
    <string name="join_family">Присоедениться к семье</string>
    <string name="leave_family_dialog_title">Вы действительно хотите выйти из состава семьи %1$s?</string>
    <string name="leave_family_dialog_message">Вы больше не будете иметь доступ к данным о бюджете этой семьи.</string>
    <string name="cancel">Отмена</string>
    <string name="may_budget">Мой бюджет</string>
    <string name="family_budget">Семейный бюджет</string>
    <string name="download_image">Загрузка фотографии</string>
    <string name="add">Добавить</string>
    <string name="password">Пароль</string>
    <string name="password_again">Подтверждение пароля</string>
    <string name="cattegory_addition">Добавление категории</string>
    <string name="enter_name">Введите название</string>
    <string name="infinity">∞</string>
    <string name="budget_error">Запланируйте бюджет</string>
    <string name="category_name">Название</string>
    <string name="delete_category">Вы уверены что хотите удалить категорию %1$s?</string>
    <string name="ok">Ок</string>


</resources>
