<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        style="@style/standard_margin"
        android:layout_marginTop="75dp"
        android:textSize="@dimen/text_small"
        android:inputType="text"
        />
    <EditText
        android:id="@+id/surname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/surname"
        style="@style/standard_margin"
        android:textSize="@dimen/text_small"
        android:inputType="text"
        />
    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        style="@style/standard_margin"
        android:textSize="@dimen/text_small"
        android:inputType="textEmailAddress"
        />
    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        style="@style/standard_margin"
        android:textSize="@dimen/text_small"
        android:inputType="textPassword"
        />
    <EditText
        android:id="@+id/repeatPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password_again"
        style="@style/standard_margin"
        android:textSize="@dimen/text_small"
        android:inputType="textPassword"
        />
    <TextView
        android:id="@+id/privacy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/standard_margin"
        android:textSize="12sp"
        android:text="@string/confidentialText"
        android:linksClickable="true"
        android:clickable="true"
        android:autoLink="all"
        android:layout_marginTop="30dp"
        android:padding="5dp"
        android:textColor="@color/lightGray"
        />
    <Button
        android:id="@+id/registration"
        android:layout_marginTop="40dp"
        style="@style/authButton"
        android:text="@string/registration"
        />
</LinearLayout>
