<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2">
        <RelativeLayout
            android:layout_width="1dp"
            android:layout_height="150dp"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/spend_photo"
                android:layout_centerInParent="true"
                android:layout_width="1300dp"
                android:layout_height="130dp"
                app:srcCompat="@drawable/photo" />
        </RelativeLayout>

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <EditText
                android:id="@+id/name"
                style="@style/standard_margin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="35dp"
                android:hint="@string/name"
                android:inputType="text"
                android:textSize="@dimen/text_small" />

            <EditText
                android:id="@+id/familyName"
                style="@style/standard_margin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/surname"
                android:inputType="text"
                android:textSize="@dimen/text_small" />
        </LinearLayout>
    </LinearLayout>
    <TextView android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/yellow"
        android:paddingLeft="@dimen/standard_margin"
        android:paddingTop="10dp"
        android:text="@string/profile_setting"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"

        >


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginTop="@dimen/standard_margin"
                android:layout_marginLeft="@dimen/standard_margin"
                android:layout_marginRight="@dimen/standard_margin"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/currency"
                    android:textSize="@dimen/text_medium"
                    android:textColor="@color/darkViolet"
                    />
                <TextView
                    android:id="@+id/currency"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/uah"
                    android:textSize="@dimen/text_medium"
                    android:textColor="@color/lightGray"
                    />
            </LinearLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/standard_margin"

                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/notification"
                    android:textSize="@dimen/text_medium"
                    android:textColor="@color/darkViolet"
                    android:id="@+id/textView" />

                <Switch
                    android:id="@+id/notificationsSwitch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignTop="@+id/textView"

                    />
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/standard_margin"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/passsett"
                    android:textSize="@dimen/text_medium"
                    android:textColor="@color/darkViolet"
                    android:id="@+id/password_setting" />

                <Switch
                    android:id="@+id/passwordSwitch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignTop="@+id/password_setting"
                    />
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/standard_margin"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/premium"
                    android:textSize="@dimen/text_medium"
                    android:textColor="@color/darkViolet"
                    />
                <Switch
                    android:id="@+id/premiumSwitch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    />
            </RelativeLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/standard_margin"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/about"
                    android:textSize="@dimen/text_medium"
                    android:textColor="@color/darkViolet"
                    />

            </LinearLayout>

        </LinearLayout>
    </LinearLayout>



