<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <LinearLayout
        android:id="@+id/violetLine"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="32dp"
        android:background="@color/lightViolet"
        android:orientation="horizontal" />

    <TextView
        android:id="@+id/spendedName"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignBottom="@+id/violetLine"
        android:layout_alignTop="@+id/violetLine"
        android:layout_toRightOf="@+id/imageView"
        android:gravity="center"
        android:text="@string/spending_name"
        android:maxLines="1"
        android:ellipsize="end"
        android:textColor="@color/white"
        android:textSize="@dimen/text_medium" />


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_margin="@dimen/standard_margin"
        app:srcCompat="@drawable/photo" />

    <RelativeLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/sumText"
        android:layout_below="@+id/spendedName"
        android:layout_toRightOf="@+id/imageView">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="8dp"
            android:orientation="vertical"

            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/category"
                android:textColor="@color/darkViolet"
                android:textSize="@dimen/text_small" />

            <TextView
                android:id="@+id/categoryName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/pets"
                android:textColor="@color/darkViolet"
                android:textSize="@dimen/text_medium"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/date"
                android:textColor="@color/darkViolet"
                android:textSize="@dimen/text_small" />

        </LinearLayout>
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/yellowLine"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@+id/imageView"
        android:layout_marginTop="-36dp"
        android:alpha="0.8"
        android:background="@color/yellow"
        android:orientation="horizontal" />

    <TextView
        android:id="@+id/sumText"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignBottom="@+id/yellowLine"
        android:layout_alignTop="@+id/yellowLine"
        android:layout_toRightOf="@+id/imageView"
        android:gravity="center"
        android:text="@string/price"
        android:textColor="@color/darkViolet"
        android:textSize="@dimen/text_medium"
        android:textStyle="bold"
        />
    <android.support.v7.widget.RecyclerView
        android:id="@+id/componentsHolder"
        android:layout_below="@id/sumText"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
</RelativeLayout>
