<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/standard_margin"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/icon"
            android:layout_width="180dp"
            android:layout_height="180dp"
            android:scaleType="centerCrop"
            android:src="@drawable/health" />

        <TextView
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/standard_margin"
            android:text="@string/category_name"
            android:textColor="@color/violet" />

        <EditText
            android:id="@+id/categoryName"
            android:layout_width="180dp"
            android:maxLines="1"
            android:layout_height="wrap_content"
            android:textColor="@color/darkViolet" />

        <RelativeLayout
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/standard_margin">

            <TextView
                android:id="@+id/cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/standard_margin"
                android:layout_toLeftOf="@+id/ok"
                android:text="@string/cancel" />

            <TextView
                android:id="@+id/ok"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:text="@string/ok"
                android:textColor="@color/violet" />

        </RelativeLayout>
    </LinearLayout>
    </LinearLayout>