<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2">

        <RelativeLayout
            android:layout_width="1dp"
            android:layout_height="170dp"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/spendingPhoto"
                android:layout_width="140dp"
                android:layout_height="140dp"
                android:layout_centerInParent="true"
                android:scaleType="centerCrop"
                android:src="@drawable/photo" />
        </RelativeLayout>

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <EditText
                android:id="@+id/name"
                style="@style/standard_margin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:hint="@string/spending_name"
                android:inputType="text"
                android:textSize="@dimen/text_small" />
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    style="@style/standard_margin"
    android:weightSum="4">
    <EditText
        android:id="@+id/price"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="3"
        android:hint="@string/sum"
        android:inputType="numberDecimal"
        android:textSize="@dimen/text_small" />
    <com.natali_pi.home_money.utils.views.DropdownView
android:id="@+id/currency"
        app:dialogButtonStyle="@color/yellow"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:hint="USD"
        android:textSize="@dimen/text_small" />
</LinearLayout>

            <com.natali_pi.home_money.utils.views.DropdownView
                android:id="@+id/date"
                app:isDatePicker="true"
                style="@style/standard_margin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/date"
                android:inputType="date"
                android:textSize="@dimen/text_small"
                />

        </LinearLayout>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/yellow"
        android:paddingLeft="@dimen/standard_margin"
        android:paddingTop="10dp"
        android:text="@string/detail_info" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/standard_margin"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/addComponent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_marginLeft="@dimen/standard_margin"
                    app:srcCompat="@drawable/plus" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/add_component"
                    android:textSize="@dimen/text_small"/>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="@dimen/standard_margin"
                android:layout_marginRight="@dimen/standard_margin"
                android:background="@color/darkViolet" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/componentsHolder"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </LinearLayout>

    </LinearLayout>
</LinearLayout>
    </ScrollView>
</LinearLayout>

